scss/_component.hero-quote.scss
.hero-quote {
  @include outer-container;
}

.hero-quote__inner {
  @include span-columns(12);
  padding: $space-x $space-y;
  font-weight: $font-weight-bold;
  color: $color-text;

  @include bp(medium) {
    @include span-columns(9);

    padding-top: ($space-x * 2);
    padding-right: ($space-y * 2);
    padding-bottom: ($space-x * 2);
    padding-left: ($space-y * 2);
  }

  @include bp(large) {
    @include span-columns(7);
    padding-top: ($space-x * 4);
    padding-bottom: ($space-x * 4);
  }

  a {
    color: $color-text;
  }
}

.hero-quote__quote {
  position: relative;
  padding-left: ($space-y);
  margin-bottom: 0;
  margin-left: -1 * ($space-y);
  font-size: modular-scale(1);
  line-height: $line-height-heading;

  @include bp(medium) {
    font-size: modular-scale(2);
  }

  @include bp(large) {
    font-size: modular-scale(3);
  }
}

.hero-quote__line {
  &:first-of-type {
    &::before {
      position: absolute;
      top: 0;
      left: .429273985em; // 10.3/23.994

      content: open-quote;

      @include bp(medium) {
        left: .185717743em; // 6.6/35.5378
      }
    }
  }

  &:last-of-type {
    &::after {
      content: close-quote;
    }
  }
}

